# napari-sphinx-theme

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
docs/: conf.py
napari_sphinx_theme/: __init__.py  napari_code_theme.py
