[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "napari_sphinx_theme"
description = "Bootstrap-based Sphinx theme from the napari community"
dynamic = ["version"]
readme = "README.md"
authors = [ {name = "napari team" }]

requires-python = ">=3.10"
dependencies = [
  "pydata-sphinx-theme>=0.15.3",
  "packaging",
]

license = { file = "LICENSE" }

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
doc = [
  "numpydoc",
]

dev = [
  "pyyaml",
  "pre-commit",
  "nox",
  "napari-sphinx-theme[coverage]",
]

[project.entry-points."sphinx.html_themes"]
napari_sphinx_theme = "napari_sphinx_theme"

[project.urls]
homepage = "https://napari.org/napari-sphinx-theme/"
repository = "https://github.com/napari/napari-sphinx-theme"

[tool.setuptools]
packages = ["napari_sphinx_theme"]
zip-safe = false

[tool.setuptools_scm]
version_file = "napari_sphinx_theme/_version.py"

[tool.setuptools.package-data]
napari_sphinx_theme = [
    "theme.conf",
    "*.html",
    "static/css/*.css",
    "components/*.html",
    "partials/*.html",
    "scripts/*.js",
]

[project.entry-points."pygments.styles"]
napari = "napari_sphinx_theme:NapariCodeTheme"

[tool.ruff]
fix = true

lint.select = [
  "C4",     # flake8-comprehensions
  "E",      # pycodestyle errors
  "F",      # pyflakes errors
  "I",      # isort
  "LOG",    # flake8-logging
  "PGH",    # pygrep-hooks
  "PYI",    # flake8-pyi
  "RUF100", # unused noqa (yesqa)
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
  "YTT",    # flake8-2020
]
lint.ignore = [
  "E203", # Whitespace before ':'
  "E221", # Multiple spaces before operator
  "E226", # Missing whitespace around arithmetic operator
  "E241", # Multiple spaces after ','
]
lint.isort.required-imports = [ "from __future__ import annotations" ]
